tests/errors/test_15.x
// Continue must be in a loop construct

fn main() -> i64 {

    continue;

    if true {
        continue;
    }
}
